tests/ValidProofs/disjI2.fitch
|y
|---
|x Ōł© y (Ōł©I2) 1