tests/InvalidRules/negE%3.fitch
|P(x)
|¬P(y)
|---
|⊥ (¬E) 1,2
